2024-03-02T16:07:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8123909764 # 167
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-02
* notice: last 14d: unq all: 1 22
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 350 725
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 350 726
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-03-02]

2024-03-02T08:07:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8121441801 # 166
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-02
* notice: last 14d: unq all: 1 21
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 349 724
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 350 725
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-03-02]

2024-03-01T16:07:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8113924529 # 164
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
* notice: last 14d: unq all: 1 20
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 349 723
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 349 724
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-03-01]

2024-03-01T08:08:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8108365993 # 163