@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-03-02T16:07:29Z",
+  "timestamp" : "2024-03-03T08:08:36Z",
   "count_outdated" : 704,
   "uniques_outdated" : 338,
-  "count" : 726,
-  "uniques" : 350,
+  "count" : 727,
+  "uniques" : 351,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -109,6 +109,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-03-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
