@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 1,
   "clones": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2024-03-02T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-03-03T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
