@@ -1,3 +1,12 @@
+2024-03-03T08:08:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8128817872 # 169
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-03
+* notice: last 14d: unq all: 1 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 350 726
+* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 351 727
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-03-03]
+
 2024-03-02T16:07:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8123909764 # 167
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-02
